--- a/index.html
+++ b/index.html
@@ -1,82 +1,114 @@
 <!doctype html>
 <html lang="th">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Photo Booth @saphasena68</title>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-  :root{
-    --frame-blue:#bfeeff;
-    --accent-yellow:#ffd54f;
-    --card-bg:#ffffff;
-    --shadow:0 8px 20px rgba(0,0,0,0.15);
-    --radius:16px;
-    --text:#0b3b5a;
-  }
-  html,body{
-    height:100%;margin:0;
-    font-family:"Quicksand","Kanit","Inter",sans-serif;
-    background:#f3f7fb;color:var(--text);
-  }
-  .wrap{min-height:100vh;display:flex;align-items:center;justify-content:center;padding:24px;box-sizing:border-box;}
-  .booth{width:380px;background:linear-gradient(180deg,var(--card-bg),#f7fbff);border-radius:18px;box-shadow:var(--shadow);padding:14px;position:relative;}
-  .title{text-align:center;font-weight:700;font-size:18px;margin-bottom:8px;color:var(--text);}
-  .frame-preview{width:100%;background:var(--frame-blue);border-radius:12px;padding:8px;box-sizing:border-box;position:relative;overflow:hidden;aspect-ratio:2/3;display:flex;align-items:center;justify-content:center;}
-  #video{width:92%;border-radius:8px;background:black;transform:scaleX(-1);}
-  .countdown{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;font-size:64px;font-weight:900;color:rgba(255,255,255,0.95);text-shadow:0 6px 18px rgba(0,0,0,0.5);pointer-events:none;}
-  .controls{margin-top:12px;display:flex;gap:8px;justify-content:center;}
-  button{background:var(--accent-yellow);border:0;padding:12px 20px;border-radius:50%;font-weight:700;cursor:pointer;box-shadow:0 4px 12px rgba(0,0,0,0.2);
-         width:70px;height:70px;font-size:0;position:relative;}
-  button::after{ /* จุดกลางแบบปุ่มกล้อง */
-    content:"";
-    position:absolute;
-    top:50%;left:50%;
-    width:40px;height:40px;
-    background:#fff;
-    border-radius:50%;
-    transform:translate(-50%,-50%);
-    box-shadow:0 0 0 4px #ffd54f inset;
-  }
-  button.secondary{
-    width:auto;height:auto;font-size:14px;border-radius:12px;
-    padding:8px 14px;
-    background:#e6f3ff;color:var(--text);font-weight:600;
-  }
-  .thumbs{margin-top:12px;display:flex;flex-direction:column;gap:8px;align-items:center;}
-  .thumb-row{width:92%;display:flex;gap:8px;justify-content:space-between;}
-  .thumb{width:22%;background:white;border-radius:8px;overflow:hidden;height:80px;display:flex;align-items:center;justify-content:center;box-shadow:0 6px 14px rgba(10,30,60,0.06);}
-  .thumb img{width:100%;height:100%;object-fit:cover;border-radius:8px;}
-  .small-note{font-size:12px;color:#334e6b;text-align:center;margin-top:8px;}
-  .actions{display:flex;gap:8px;justify-content:center;margin-top:8px;}
-  .download-btn{background:#4d9cff;color:white;padding:8px 10px;border-radius:10px;border:0;font-weight:700;}
-  .flash {
-    position: absolute;
-    inset: 0;
-    background: white;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.2s;
-    z-index: 10;
-  }
-  .flash.show { opacity: 0.8; }
-  /* ข้อความ Photo Booth หลังถ่ายเสร็จ */
-  .final-text{
-    position:absolute;
-    top:8%;
-    left:50%;
-    transform:translateX(-50%);
-    font-size:48px;
-    font-weight:900;
-    color:#ffd54f;
-    text-shadow:0 4px 10px rgba(0,0,0,0.3);
-    opacity:0;
-    pointer-events:none;
-    z-index:20;
-    transition:opacity 0.8s ease;
-  }
-  .final-text.show{opacity:1;}
-  @media(min-width:700px){.booth{width:480px;}}
+:root{
+  --frame-blue:#bfeeff;
+  --accent-yellow:#ffd54f;
+  --card-bg:#ffffff;
+  --shadow:0 8px 20px rgba(0,0,0,0.15);
+  --radius:18px;
+  --text:#0b3b5a;
+  --pink:#ffb6c1;
+}
+html,body{
+  height:100%;margin:0;
+  font-family:"Quicksand","Kanit",sans-serif;
+  background:#f3f7fb;color:var(--text);
+}
+.wrap{min-height:100vh;display:flex;align-items:center;justify-content:center;padding:24px;box-sizing:border-box;}
+.booth{width:380px;background:linear-gradient(180deg,var(--card-bg),#f7fbff);
+  border-radius:18px;box-shadow:var(--shadow);padding:14px;position:relative;}
+.title{text-align:center;font-weight:700;font-size:18px;margin-bottom:8px;color:var(--text);}
+.frame-preview{
+  width:100%;background:var(--frame-blue);
+  border-radius:20px; /* โค้งมนเพิ่ม */
+  padding:10px;box-sizing:border-box;
+  position:relative;overflow:hidden;aspect-ratio:2/3;
+  display:flex;align-items:center;justify-content:center;
+  border:4px dashed var(--pink); /* กรอบน่ารัก */
+}
+#video{width:92%;border-radius:14px;background:black;transform:scaleX(-1);
+       box-shadow:0 0 12px rgba(255,182,193,0.6);}
+.countdown{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
+           font-size:64px;font-weight:900;color:rgba(255,255,255,0.95);
+           text-shadow:0 6px 18px rgba(0,0,0,0.5);pointer-events:none;}
+.controls{margin-top:16px;display:flex;gap:8px;justify-content:center;flex-wrap:wrap;}
+/* ปุ่มถ่ายภาพ */
+#startBtn{
+  background:var(--accent-yellow);
+  border:4px solid #fff;
+  width:100px;height:100px;
+  border-radius:50%;
+  font-size:20px;
+  font-weight:700;
+  color:var(--text);
+  display:flex;align-items:center;justify-content:center;
+  cursor:pointer;
+  box-shadow:0 4px 12px rgba(0,0,0,0.2);
+}
+#retakeBtn{
+  background:#e6f3ff;
+  color:var(--text);
+  padding:8px 14px;
+  border-radius:14px;
+  border:0;
+  font-weight:600;
+}
+.thumbs{margin-top:14px;display:flex;flex-direction:column;gap:10px;align-items:center;}
+.thumb-row{width:92%;display:flex;gap:8px;justify-content:space-between;}
+.thumb{
+  width:22%;background:white;border-radius:12px;overflow:hidden;height:80px;
+  display:flex;align-items:center;justify-content:center;
+  border:3px solid var(--pink);
+  box-shadow:0 6px 14px rgba(10,30,60,0.1);
+}
+.thumb img{width:100%;height:100%;object-fit:cover;border-radius:12px;}
+.small-note{font-size:12px;color:#334e6b;text-align:center;margin-top:8px;}
+.actions{display:flex;gap:8px;justify-content:center;margin-top:10px;}
+/* ปุ่มดาวน์โหลดรูปสี่เหลี่ยมโค้งมน */
+.download-btn{
+  background:transparent;
+  color:var(--text);
+  padding:10px 18px;
+  border-radius:16px;
+  border:3px solid var(--accent-yellow);
+  font-weight:700;
+  font-size:16px;
+  box-shadow:0 4px 10px rgba(0,0,0,0.1);
+  cursor:pointer;
+}
+.flash {
+  position: absolute;
+  inset: 0;
+  background: white;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s;
+  z-index: 10;
+}
+.flash.show { opacity: 0.8; }
+/* ข้อความ Photo Booth หลังถ่ายเสร็จ */
+.final-text{
+  position:absolute;
+  top:4%; /* สูงขึ้น ไม่ทับปุ่มหรือคำอื่น */
+  left:50%;
+  transform:translateX(-50%);
+  font-size:48px;
+  font-weight:900;
+  color:#ffd54f;
+  text-shadow:0 4px 10px rgba(0,0,0,0.3);
+  opacity:0;
+  pointer-events:none;
+  z-index:20;
+  transition:opacity 0.8s ease;
+}
+.final-text.show{opacity:1;}
+@media(min-width:700px){.booth{width:480px;}}
 </style>
 </head>
 <body>
@@ -91,8 +123,8 @@
       <div class="final-text" id="finalText">Photo Booth</div>
     </div>
     <div class="controls">
-      <button id="startBtn" title="ถ่ายภาพ"></button>
-      <button id="retakeBtn" class="secondary">เริ่มใหม่</button>
+      <button id="startBtn">กดถ่ายภาพ</button>
+      <button id="retakeBtn">เริ่มใหม่</button>
     </div>
     <div class="thumbs">
       <div class="thumb-row">
@@ -103,7 +135,7 @@
       </div>
       <div class="small-note">ภาพตัวอย่าง 4 ช่อง (แนวตั้ง) • ขนาดส่งออก 4×6 นิ้ว</div>
       <div class="actions">
-        <button id="downloadBtn" class="download-btn">ดาวน์โหลด 4x6</button>
+        <button id="downloadBtn" class="download-btn">ดาวน์โหลดรูป</button>
       </div>
     </div>
   </div>
@@ -117,8 +149,7 @@
   const startBtn=document.getElementById('startBtn');
   const retakeBtn=document.getElementById('retakeBtn');
   const countdownEl=document.getElementById('countdown');
-  const thumbs=[document.getElementById('t1'),document.getElementById('t2'),
-                document.getElementById('t3'),document.getElementById('t4')];
+  const thumbs=[t1,t2,t3,t4];
   const snapSound=document.getElementById('snapSound');
   const flashEl=document.getElementById('flash');
   const finalText=document.getElementById('finalText');
@@ -161,9 +192,8 @@
     ctx.drawImage(video,0,0,vw,vh);
     return canvas.toDataURL('image/png');
   }
-
   function playSnap(){
-    snapSound.currentTime = 0;
+    snapSound.currentTime=0;
     snapSound.play().catch(()=>{});
     flashEl.classList.add('show');
     setTimeout(()=>flashEl.classList.remove('show'),150);
@@ -183,7 +213,6 @@
       thumbs[i].innerHTML=`<img src="${data}">`;
       await new Promise(r=>setTimeout(r,400));
     }
-    // โชว์ข้อความน่ารัก
     finalText.classList.add('show');
     setTimeout(()=>finalText.classList.remove('show'),3000);
     startBtn.disabled=false;retakeBtn.disabled=false;
@@ -195,13 +224,18 @@
     thumbs.forEach((el,i)=>el.innerHTML=`<span style="opacity:0.45;">${i+1}</span>`);
   });
 
-  // ---- ฟังก์ชัน export 4 รูป ----
-  function drawStar(ctx,x,y,r,color){
-    ctx.save();ctx.fillStyle=color;ctx.beginPath();
-    for(let i=0;i<5;i++){const a=(Math.PI*2*i)/5-Math.PI/2;ctx.lineTo(x+Math.cos(a)*r,y+Math.sin(a)*r);const ia=a+Math.PI/5;ctx.lineTo(x+Math.cos(ia)*r*0.5,y+Math.sin(ia)*r*0.5);}
-    ctx.closePath();ctx.fill();ctx.restore();
+  // ----- Export 4x6 -----
+  function roundRect(ctx,x,y,w,h,r,fill,stroke){
+    ctx.beginPath();
+    ctx.moveTo(x+r,y);
+    ctx.arcTo(x+w,y,x+w,y+h,r);
+    ctx.arcTo(x+w,y+h,x,y+h,r);
+    ctx.arcTo(x,y+h,x,y,r);
+    ctx.arcTo(x,y,x+w,y,r);
+    ctx.closePath();
+    if(fill)ctx.fill();
+    if(stroke)ctx.stroke();
   }
-  function roundRect(ctx,x,y,w,h,r,fill,stroke){ctx.beginPath();ctx.moveTo(x+r,y);ctx.arcTo(x+w,y,x+w,y+h,r);ctx.arcTo(x+w,y+h,x,y+h,r);ctx.arcTo(x,y+h,x,y,r);ctx.arcTo(x,y,x+w,y,r);ctx.closePath();if(fill)ctx.fill();if(stroke)ctx.stroke();}
   function drawImageInFrame(ctx,imgSrc,x,y,w,h,r){
     return new Promise((resolve,reject)=>{
       const img=new Image();
@@ -211,45 +245,41 @@
         const nw=img.width*ratio,nh=img.height*ratio;
         const dx=x+(w-nw)/2,dy=y+(h-nh)/2;
         ctx.drawImage(img,dx,dy,nw,nh);ctx.restore();resolve();
-      };img.onerror=reject;img.src=imgSrc;
+      };
+      img.onerror=reject;img.src=imgSrc;
     });
   }
-
   document.getElementById('downloadBtn').addEventListener('click',async()=>{
     if(!captures.some(c=>c)){alert('ยังไม่ได้ถ่ายภาพ');return;}
     const finalW=1200,finalH=1800;
     const canvas=document.createElement('canvas');canvas.width=finalW;canvas.height=finalH;
     const ctx=canvas.getContext('2d');
-    ctx.fillStyle='#bfeeff';ctx.fillRect(0,0,finalW,finalH);
+    ctx.fillStyle='#ffe6f0';ctx.fillRect(0,0,finalW,finalH);
 
     const margin=60,innerX=margin,innerY=margin+60;
     const innerW=finalW-margin*2,innerH=finalH-innerY-margin;
     ctx.fillStyle='#fff';roundRect(ctx,innerX,innerY,innerW,innerH,20,true,false);
 
-    ctx.fillStyle='#08324d';ctx.font='900 64px Quicksand';ctx.textAlign='center';ctx.textBaseline='middle';
+    ctx.fillStyle='#ff99c2';ctx.font='900 64px Quicksand';
+    ctx.textAlign='center';ctx.textBaseline='middle';
     ctx.fillText('Photo Booth',finalW/2,margin+25);
 
     const gutter=18,photoX=innerX+28,photoW=innerW-56;
     const singleH=Math.floor((innerH-gutter*3-56)/4);
     let y=innerY+28;
     for(let i=0;i<4;i++){
-      ctx.fillStyle='#e9f6ff';roundRect(ctx,photoX,y,photoW,singleH,14,true,false);
+      ctx.fillStyle='#e9f6ff';
+      roundRect(ctx,photoX,y,photoW,singleH,14,true,false);
       if(captures[i]) await drawImageInFrame(ctx,captures[i],photoX,y,photoW,singleH,14);
-      ctx.strokeStyle='#fff';ctx.lineWidth=8;roundRect(ctx,photoX+6,y+6,photoW-12,singleH-12,10,false,true);
+      ctx.strokeStyle='#ffb6c1';ctx.lineWidth=8;
+      roundRect(ctx,photoX+6,y+6,photoW-12,singleH-12,12,false,true);
       y+=singleH+gutter;
     }
 
-    for(let i=0;i<25;i++){
-      const r=Math.random()*18+6;
-      const x=Math.random()*finalW;
-      const yPos=Math.random()*finalH;
-      if(x>photoX-40 && x<photoX+photoW+40 && yPos>innerY-20 && yPos<innerY+innerH+20) continue;
-      drawStar(ctx,x,yPos,r,'#ffd54f');
-    }
-
-    ctx.fillStyle='#3b6b85';ctx.font='18px Quicksand';ctx.fillText('พิมพ์ขนาด 4x6 นิ้ว • Photo Booth',finalW/2,finalH-30);
-
-    const a=document.createElement('a');a.href=canvas.toDataURL('image/png');a.download='photobooth_4x6.png';a.click();
+    const a=document.createElement('a');
+    a.href=canvas.toDataURL('image/png');
+    a.download='photobooth_4x6.png';
+    a.click();
   });
 })();
 </script>
