--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ html,body{
 .thumbs{margin-top:14px;display:flex;flex-direction:column;gap:10px;align-items:center;}
 .thumb-row{width:92%;display:flex;gap:8px;justify-content:space-between;}
 .thumb{
-  width:22%;background:white;border-radius:12px;overflow:hidden;height:80px;
+  width:30%;background:white;border-radius:12px;overflow:hidden;height:80px;
   display:flex;align-items:center;justify-content:center;
   border:3px solid var(--pink);
   box-shadow:0 6px 14px rgba(10,30,60,0.1);
@@ -80,16 +80,8 @@ html,body{
   box-shadow:0 4px 10px rgba(0,0,0,0.1);
   cursor:pointer;
 }
-.flash {
-  position: absolute;
-  inset: 0;
-  background: white;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.2s;
-  z-index: 10;
-}
-.flash.show { opacity: 0.8; }
+.flash {position:absolute;inset:0;background:white;opacity:0;pointer-events:none;transition:opacity 0.2s;z-index:10;}
+.flash.show {opacity:0.8;}
 .final-text{
   position:absolute;
   top:4%;
@@ -128,9 +120,8 @@ html,body{
         <div class="thumb" id="t1"><span style="opacity:0.45;">1</span></div>
         <div class="thumb" id="t2"><span style="opacity:0.45;">2</span></div>
         <div class="thumb" id="t3"><span style="opacity:0.45;">3</span></div>
-        <div class="thumb" id="t4"><span style="opacity:0.45;">4</span></div>
       </div>
-      <div class="small-note">ภาพตัวอย่าง 4 ช่อง (แนวตั้ง) • ขนาดส่งออก 4×6 นิ้ว</div>
+      <div class="small-note">ภาพตัวอย่าง 3 ช่อง (แนวตั้ง) • ขนาดส่งออก 4×6 นิ้ว</div>
       <div class="actions">
         <button id="downloadBtn" class="download-btn">ดาวน์โหลดรูป</button>
       </div>
@@ -146,11 +137,11 @@ html,body{
   const startBtn=document.getElementById('startBtn');
   const retakeBtn=document.getElementById('retakeBtn');
   const countdownEl=document.getElementById('countdown');
-  const thumbs=[t1,t2,t3,t4];
+  const thumbs=[t1,t2,t3];
   const snapSound=document.getElementById('snapSound');
   const flashEl=document.getElementById('flash');
   const finalText=document.getElementById('finalText');
-  let captures=[null,null,null,null];
+  let captures=[null,null,null];
 
   const starContainer=document.getElementById('stars');
   function createStars(n=20){
@@ -196,12 +187,12 @@ html,body{
     setTimeout(()=>flashEl.classList.remove('show'),150);
   }
 
-  async function takeFourShots(){
+  async function takeShots(){
     startBtn.disabled=true;retakeBtn.disabled=true;
-    captures=[null,null,null,null];
+    captures=[null,null,null];
     finalText.classList.remove('show');
     thumbs.forEach((el,i)=>el.innerHTML=`<span style="opacity:0.45;">${i+1}</span>`);
-    for(let i=0;i<4;i++){
+    for(let i=0;i<3;i++){
       for(let s=3;s>=1;s--){showCountdown(s);await new Promise(r=>setTimeout(r,800));}
       hideCountdown();
       const data=captureFrame();
@@ -214,14 +205,14 @@ html,body{
     setTimeout(()=>finalText.classList.remove('show'),3000);
     startBtn.disabled=false;retakeBtn.disabled=false;
   }
-  startBtn.addEventListener('click',takeFourShots);
+  startBtn.addEventListener('click',takeShots);
   retakeBtn.addEventListener('click',()=>{
-    captures=[null,null,null,null];
+    captures=[null,null,null];
     finalText.classList.remove('show');
     thumbs.forEach((el,i)=>el.innerHTML=`<span style="opacity:0.45;">${i+1}</span>`);
   });
 
-  // ----- Export 4x6 -----
+  // =======  Export 4x6 : 3 ช่อง + น่ารัก =======
   function roundRect(ctx,x,y,w,h,r,fill,stroke){
     ctx.beginPath();
     ctx.moveTo(x+r,y);
@@ -256,6 +247,17 @@ html,body{
     }
     ctx.closePath();ctx.fill();ctx.restore();
   }
+  function drawCloud(ctx,x,y,w,h,color){
+    ctx.save();ctx.fillStyle=color;
+    ctx.beginPath();
+    const r=h/2;
+    ctx.arc(x+w*0.25,y+r,r,Math.PI*0.5,Math.PI*1.5);
+    ctx.arc(x+w*0.5,y+r*0.7,r*0.8,Math.PI*0.5,Math.PI*1.5);
+    ctx.arc(x+w*0.75,y+r,r,Math.PI*0.5,Math.PI*1.5);
+    ctx.closePath();
+    ctx.fill();
+    ctx.restore();
+  }
 
   document.getElementById('downloadBtn').addEventListener('click',async()=>{
     if(!captures.some(c=>c)){alert('ยังไม่ได้ถ่ายภาพ');return;}
@@ -263,45 +265,53 @@ html,body{
     const canvas=document.createElement('canvas');canvas.width=finalW;canvas.height=finalH;
     const ctx=canvas.getContext('2d');
 
-    /* พื้นหลังฟ้าแทนชมพู */
+    // พื้นหลังฟ้าสดใส
     ctx.fillStyle='#bfeeff';
     ctx.fillRect(0,0,finalW,finalH);
 
+    // กรอบสีขาว
     const margin=60,innerX=margin,innerY=margin+60;
     const innerW=finalW-margin*2,innerH=finalH-innerY-margin;
     ctx.fillStyle='#fff';
     roundRect(ctx,innerX,innerY,innerW,innerH,20,true,false);
 
+    // ชื่อ
     ctx.fillStyle='#08324d';
     ctx.font='900 64px Quicksand';
     ctx.textAlign='center';
     ctx.textBaseline='middle';
     ctx.fillText('Photo Booth',finalW/2,margin+25);
 
-    const gutter=18,photoX=innerX+28,photoW=innerW-56;
-    const singleH=Math.floor((innerH-gutter*3-56)/4);
+    // วาด 3 ช่อง
+    const gutter=24,photoX=innerX+28,photoW=innerW-56;
+    const singleH=Math.floor((innerH-gutter*2-56)/3);
     let y=innerY+28;
-    for(let i=0;i<4;i++){
+    for(let i=0;i<3;i++){
       ctx.fillStyle='#e9f6ff';
-      roundRect(ctx,photoX,y,photoW,singleH,14,true,false);
-      if(captures[i]) await drawImageInFrame(ctx,captures[i],photoX,y,photoW,singleH,14);
+      roundRect(ctx,photoX,y,photoW,singleH,16,true,false);
+      if(captures[i]) await drawImageInFrame(ctx,captures[i],photoX,y,photoW,singleH,16);
       ctx.strokeStyle='#fff';ctx.lineWidth=8;
-      roundRect(ctx,photoX+6,y+6,photoW-12,singleH-12,12,false,true);
+      roundRect(ctx,photoX+6,y+6,photoW-12,singleH-12,14,false,true);
       y+=singleH+gutter;
     }
 
-    /* เพิ่มดาวสีเหลืองรอบกรอบ */
-    for(let i=0;i<25;i++){
-      const r=Math.random()*18+6;
+    // ⭐ ดาวและ ☁ เมฆสีพาสเทลแบบสุ่ม
+    const colors=['#ffd54f','#ffb6c1','#fff0aa','#ffe0f0'];
+    for(let i=0;i<35;i++){
+      const r=Math.random()*20+6;
       const x=Math.random()*finalW;
       const yPos=Math.random()*finalH;
       if(x>photoX-40 && x<photoX+photoW+40 && yPos>innerY-20 && yPos<innerY+innerH+20) continue;
-      drawStar(ctx,x,yPos,r,'#ffd54f');
+      if(Math.random()<0.7){
+        drawStar(ctx,x,yPos,r,colors[Math.floor(Math.random()*colors.length)]);
+      }else{
+        drawCloud(ctx,x,yPos,r*3,r*1.5,colors[Math.floor(Math.random()*colors.length)]);
+      }
     }
 
     const a=document.createElement('a');
     a.href=canvas.toDataURL('image/png');
-    a.download='photobooth_4x6.png';
+    a.download='photobooth_3shots.png';
     a.click();
   });
 })();
