--- a/index.html
+++ b/index.html
@@ -1,176 +1,320 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="th">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Photo Booth</title>
-
-<!-- ฟอนต์หัวข้อ -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Photo Booth @saphasena68</title>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-body{
-  margin:0;
-  background:#bde7ff;
-  font-family:'Poppins',sans-serif;
+:root{
+  --frame-blue:#bfeeff;
+  --accent-yellow:#ffd54f;
+  --card-bg:#ffffff;
+  --shadow:0 8px 20px rgba(0,0,0,0.15);
+  --radius:18px;
+  --text:#0b3b5a;
+  --pink:#ffb6c1;
 }
-
-/* ====== หน้าแรก (ถ่ายภาพ) ====== */
-.wrap{
-  text-align:center;
-  padding:20px;
+html,body{
+  height:100%;margin:0;
+  font-family:"Quicksand","Kanit",sans-serif;
+  background:#f3f7fb;color:var(--text);
 }
-.wrap h1{
-  font-size:2.2rem;
-  color:#333;
-  margin-bottom:10px;
-}
-video{
-  width:320px;
-  height:auto;
+.wrap{min-height:100vh;display:flex;align-items:center;justify-content:center;padding:24px;box-sizing:border-box;}
+.booth{width:380px;background:linear-gradient(180deg,var(--card-bg),#f7fbff);
+  border-radius:18px;box-shadow:var(--shadow);padding:14px;position:relative;}
+.title{text-align:center;font-weight:700;font-size:18px;margin-bottom:8px;color:var(--text);}
+.frame-preview{
+  width:100%;background:var(--frame-blue);
   border-radius:20px;
-  box-shadow:0 0 10px rgba(0,0,0,0.3);
+  padding:10px;box-sizing:border-box;
+  position:relative;overflow:hidden;aspect-ratio:2/3;
+  display:flex;align-items:center;justify-content:center;
+  border:4px dashed var(--pink);
 }
-button.snap-btn{
-  margin-top:20px;
-  background:#ff82a0;
-  color:white;
-  font-size:1.2rem;
-  padding:12px 28px;
-  border:none;
-  border-radius:40px;
+#video{width:92%;border-radius:14px;background:black;transform:scaleX(-1);
+       box-shadow:0 0 12px rgba(255,182,193,0.6);}
+.countdown{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
+           font-size:64px;font-weight:900;color:rgba(255,255,255,0.95);
+           text-shadow:0 6px 18px rgba(0,0,0,0.5);pointer-events:none;}
+.controls{margin-top:16px;display:flex;gap:8px;justify-content:center;flex-wrap:wrap;}
+#startBtn{
+  background:var(--accent-yellow);
+  border:4px solid #fff;
+  width:100px;height:100px;
+  border-radius:50%;
+  font-size:20px;
+  font-weight:700;
+  color:var(--text);
+  display:flex;align-items:center;justify-content:center;
   cursor:pointer;
-  box-shadow:0 4px 10px rgba(0,0,0,0.2);
-  transition:transform 0.1s;
+  box-shadow:0 4px 12px rgba(0,0,0,0.2);
 }
-button.snap-btn:active{
-  transform:scale(0.95);
+#retakeBtn{
+  background:#e6f3ff;
+  color:var(--text);
+  padding:8px 14px;
+  border-radius:14px;
+  border:0;
+  font-weight:600;
 }
-
-/* ====== หน้าผลลัพธ์ ====== */
-.result-screen{
-  display:none;
-  justify-content:center;
-  align-items:center;
-  min-height:100vh;
-  background:#bde7ff;
-  position:relative;
-  overflow:hidden;
+.thumbs{margin-top:14px;display:flex;flex-direction:column;gap:10px;align-items:center;}
+.thumb-row{width:92%;display:flex;gap:8px;justify-content:space-between;}
+.thumb{
+  width:30%;background:white;border-radius:12px;overflow:hidden;height:80px;
+  display:flex;align-items:center;justify-content:center;
+  border:3px solid var(--pink);
+  box-shadow:0 6px 14px rgba(10,30,60,0.1);
 }
-.result-frame{
-  position:relative;
-  background:#bde7ff;
-  border-radius:20px;
-  padding:25px;
-  box-shadow:0 0 15px rgba(0,0,0,0.1);
-  text-align:center;
+.thumb img{width:100%;height:100%;object-fit:cover;border-radius:12px;}
+.small-note{font-size:12px;color:#334e6b;text-align:center;margin-top:8px;}
+.actions{display:flex;gap:8px;justify-content:center;margin-top:10px;}
+.download-btn{
+  background:transparent;
+  color:var(--text);
+  padding:10px 18px;
+  border-radius:16px;
+  border:3px solid var(--accent-yellow);
+  font-weight:700;
+  font-size:16px;
+  box-shadow:0 4px 10px rgba(0,0,0,0.1);
+  cursor:pointer;
 }
-.result-frame h1{
-  font-size:2.2rem;
-  margin:0 0 20px 0;
-  color:#333;
-}
-.photo-strip{
-  display:flex;
-  flex-direction:column;
-  gap:18px;
-}
-.photo-strip img{
-  width:320px;
-  border-radius:15px;
-  border:6px solid #fff;
-  box-shadow:0 4px 12px rgba(0,0,0,0.15);
-}
-.footer-tag{
-  margin-top:18px;
-  font-size:1rem;
-  color:#444;
-}
-
-/* ดาวเหลือง */
-.star{
+.flash {position:absolute;inset:0;background:white;opacity:0;pointer-events:none;transition:opacity 0.2s;z-index:10;}
+.flash.show {opacity:0.8;}
+.final-text{
   position:absolute;
-  background:yellow;
-  clip-path:polygon(
-    50% 0%,61% 35%,98% 35%,
-    68% 57%,79% 91%,50% 70%,
-    21% 91%,32% 57%,2% 35%,
-    39% 35%
-  );
-  opacity:0.8;
-  animation: float 12s infinite linear;
+  top:4%;
+  left:50%;
+  transform:translateX(-50%);
+  font-size:48px;
+  font-weight:900;
+  color:#ffd54f;
+  text-shadow:0 4px 10px rgba(0,0,0,0.3);
+  opacity:0;
+  pointer-events:none;
+  z-index:20;
+  transition:opacity 0.8s ease;
 }
-@keyframes float{
-  0%{transform:translateY(0) rotate(0deg);}
-  100%{transform:translateY(-120vh) rotate(360deg);}
-}
+.final-text.show{opacity:1;}
+@media(min-width:700px){.booth{width:480px;}}
 </style>
 </head>
 <body>
-
-<!-- ====== หน้าแรก: กล้อง ====== -->
-<div class="wrap" id="cameraScreen">
-  <h1>Photo Booth</h1>
-  <video id="video" autoplay playsinline></video><br>
-  <button class="snap-btn" id="snap">กดถ่ายภาพ</button>
-</div>
-
-<!-- ====== หน้าผลลัพธ์ ====== -->
-<div class="result-screen" id="resultScreen">
-  <div class="result-frame">
-    <h1>Photo Booth</h1>
-    <div class="photo-strip" id="photos"></div>
-    <div class="footer-tag">@senasapha68</div>
+<div class="wrap">
+  <div class="booth">
+    <div class="title">Photo Booth @saphasena68</div>
+    <div class="frame-preview" id="framePreview">
+      <video id="video" autoplay playsinline></video>
+      <div class="countdown" id="countdown" style="display:none;"></div>
+      <div id="stars"></div>
+      <div class="flash" id="flash"></div>
+      <div class="final-text" id="finalText">Photo Booth</div>
+    </div>
+    <div class="controls">
+      <button id="startBtn">กดถ่ายภาพ</button>
+      <button id="retakeBtn">เริ่มใหม่</button>
+    </div>
+    <div class="thumbs">
+      <div class="thumb-row">
+        <div class="thumb" id="t1"><span style="opacity:0.45;">1</span></div>
+        <div class="thumb" id="t2"><span style="opacity:0.45;">2</span></div>
+        <div class="thumb" id="t3"><span style="opacity:0.45;">3</span></div>
+      </div>
+      <div class="small-note">ภาพตัวอย่าง 3 ช่อง (แนวตั้ง) • ขนาดส่งออก 4×6 นิ้ว</div>
+      <div class="actions">
+        <button id="downloadBtn" class="download-btn">ดาวน์โหลดรูป</button>
+      </div>
+    </div>
   </div>
 </div>
 
+<audio id="snapSound" src="https://cdn.jsdelivr.net/gh/naptha/talkdemo/snap.mp3" preload="auto"></audio>
+
 <script>
-const video = document.getElementById('video');
-const snap  = document.getElementById('snap');
-const cameraScreen = document.getElementById('cameraScreen');
-const resultScreen = document.getElementById('resultScreen');
-const photos = document.getElementById('photos');
+(async function(){
+  const video=document.getElementById('video');
+  const startBtn=document.getElementById('startBtn');
+  const retakeBtn=document.getElementById('retakeBtn');
+  const countdownEl=document.getElementById('countdown');
+  const thumbs=[t1,t2,t3];
+  const snapSound=document.getElementById('snapSound');
+  const flashEl=document.getElementById('flash');
+  const finalText=document.getElementById('finalText');
+  let captures=[null,null,null];
 
-navigator.mediaDevices.getUserMedia({video:true})
-  .then(stream => video.srcObject = stream);
-
-function captureFrame(){
-  const canvas = document.createElement('canvas');
-  canvas.width = video.videoWidth;
-  canvas.height = video.videoHeight;
-  const ctx = canvas.getContext('2d');
-  ctx.drawImage(video,0,0);
-  return canvas.toDataURL('image/png');
-}
-
-snap.addEventListener('click', async () => {
-  let shots = [];
-  for(let i=0;i<3;i++){
-    shots.push(captureFrame());
-    await new Promise(r=>setTimeout(r,800)); // เว้นจังหวะถ่าย
+  const starContainer=document.getElementById('stars');
+  function createStars(n=20){
+    for(let i=0;i<n;i++){
+      const star=document.createElement('div');
+      const size=Math.random()*14+6;
+      star.style.width=star.style.height=size+'px';
+      star.style.background='#ffd54f';
+      star.style.clipPath='polygon(50% 0%,61% 35%,98% 35%,68% 57%,79% 91%,50% 70%,21% 91%,32% 57%,2% 35%,39% 35%)';
+      star.style.position='absolute';
+      star.style.top=Math.random()*90+'%';
+      star.style.left=Math.random()*90+'%';
+      star.style.opacity=0.9;
+      starContainer.appendChild(star);
+    }
   }
-  cameraScreen.style.display='none';
-  resultScreen.style.display='flex';
+  createStars(20);
 
-  shots.forEach(src=>{
-    const img=document.createElement('img');
-    img.src=src;
-    photos.appendChild(img);
+  async function startCamera(){
+    try{
+      const stream=await navigator.mediaDevices.getUserMedia({video:{facingMode:"user"},audio:false});
+      video.srcObject=stream; await video.play();
+    }catch(err){alert('เปิดกล้องไม่สำเร็จ');}
+  }
+  await startCamera();
+
+  function showCountdown(n){countdownEl.style.display='flex';countdownEl.textContent=n;}
+  function hideCountdown(){countdownEl.style.display='none';}
+
+  function captureFrame(){
+    const vw=video.videoWidth,vh=video.videoHeight;
+    const canvas=document.createElement('canvas');
+    canvas.width=vw;canvas.height=vh;
+    const ctx=canvas.getContext('2d');
+    ctx.translate(vw,0);ctx.scale(-1,1);
+    ctx.drawImage(video,0,0,vw,vh);
+    return canvas.toDataURL('image/png');
+  }
+  function playSnap(){
+    snapSound.currentTime=0;
+    snapSound.play().catch(()=>{});
+    flashEl.classList.add('show');
+    setTimeout(()=>flashEl.classList.remove('show'),150);
+  }
+
+  async function takeShots(){
+    startBtn.disabled=true;retakeBtn.disabled=true;
+    captures=[null,null,null];
+    finalText.classList.remove('show');
+    thumbs.forEach((el,i)=>el.innerHTML=`<span style="opacity:0.45;">${i+1}</span>`);
+    for(let i=0;i<3;i++){
+      for(let s=3;s>=1;s--){showCountdown(s);await new Promise(r=>setTimeout(r,800));}
+      hideCountdown();
+      const data=captureFrame();
+      captures[i]=data;
+      playSnap();
+      thumbs[i].innerHTML=`<img src="${data}">`;
+      await new Promise(r=>setTimeout(r,400));
+    }
+    finalText.classList.add('show');
+    setTimeout(()=>finalText.classList.remove('show'),3000);
+    startBtn.disabled=false;retakeBtn.disabled=false;
+  }
+  startBtn.addEventListener('click',takeShots);
+  retakeBtn.addEventListener('click',()=>{
+    captures=[null,null,null];
+    finalText.classList.remove('show');
+    thumbs.forEach((el,i)=>el.innerHTML=`<span style="opacity:0.45;">${i+1}</span>`);
   });
 
-  // เพิ่มดาวสุ่ม
-  for(let i=0;i<25;i++){
-    const s=document.createElement('div');
-    s.className='star';
-    const size=Math.random()*12+8;
-    s.style.width=size+'px';
-    s.style.height=size+'px';
-    s.style.left=Math.random()*100+'vw';
-    s.style.bottom='-20px';
-    s.style.animationDuration=(8+Math.random()*8)+'s';
-    document.body.appendChild(s);
+  // =======  Export 4x6 : 3 ช่อง + ดาว/เมฆพาสเทล =======
+  function roundRect(ctx,x,y,w,h,r,fill,stroke){
+    ctx.beginPath();
+    ctx.moveTo(x+r,y);
+    ctx.arcTo(x+w,y,x+w,y+h,r);
+    ctx.arcTo(x+w,y+h,x,y+h,r);
+    ctx.arcTo(x,y+h,x,y,r);
+    ctx.arcTo(x,y,x+w,y,r);
+    ctx.closePath();
+    if(fill)ctx.fill();
+    if(stroke)ctx.stroke();
   }
-});
+  function drawImageInFrame(ctx,imgSrc,x,y,w,h,r){
+    return new Promise((resolve,reject)=>{
+      const img=new Image();
+      img.onload=function(){
+        ctx.save();roundRect(ctx,x,y,w,h,r,false,false);ctx.clip();
+        const ratio=Math.max(w/img.width,h/img.height);
+        const nw=img.width*ratio,nh=img.height*ratio;
+        const dx=x+(w-nw)/2,dy=y+(h-nh)/2;
+        ctx.drawImage(img,dx,dy,nw,nh);ctx.restore();resolve();
+      };
+      img.onerror=reject;img.src=imgSrc;
+    });
+  }
+  function drawStar(ctx,x,y,r,color){
+    ctx.save();ctx.fillStyle=color;ctx.beginPath();
+    for(let i=0;i<5;i++){
+      const a=(Math.PI*2*i)/5-Math.PI/2;
+      ctx.lineTo(x+Math.cos(a)*r,y+Math.sin(a)*r);
+      const ia=a+Math.PI/5;
+      ctx.lineTo(x+Math.cos(ia)*r*0.5,y+Math.sin(ia)*r*0.5);
+    }
+    ctx.closePath();ctx.fill();ctx.restore();
+  }
+  function drawCloud(ctx,x,y,w,h,color){
+    ctx.save();ctx.fillStyle=color;
+    ctx.beginPath();
+    const r=h/2;
+    ctx.arc(x+w*0.25,y+r,r,Math.PI*0.5,Math.PI*1.5);
+    ctx.arc(x+w*0.5,y+r*0.7,r*0.8,Math.PI*0.5,Math.PI*1.5);
+    ctx.arc(x+w*0.75,y+r,r,Math.PI*0.5,Math.PI*1.5);
+    ctx.closePath();
+    ctx.fill();
+    ctx.restore();
+  }
+
+  document.getElementById('downloadBtn').addEventListener('click',async()=>{
+    if(!captures.some(c=>c)){alert('ยังไม่ได้ถ่ายภาพ');return;}
+    const finalW=1200,finalH=1800;
+    const canvas=document.createElement('canvas');canvas.width=finalW;canvas.height=finalH;
+    const ctx=canvas.getContext('2d');
+
+    // พื้นหลังฟ้า
+    ctx.fillStyle='#bfeeff';
+    ctx.fillRect(0,0,finalW,finalH);
+
+    // กรอบสีขาว
+    const margin=60,innerX=margin,innerY=margin+60;
+    const innerW=finalW-margin*2,innerH=finalH-innerY-margin;
+    ctx.fillStyle='#fff';
+    roundRect(ctx,innerX,innerY,innerW,innerH,20,true,false);
+
+    // ชื่อด้านบน
+    ctx.fillStyle='#08324d';
+    ctx.font='900 64px Quicksand';
+    ctx.textAlign='center';
+    ctx.textBaseline='middle';
+    ctx.fillText('Photo Booth',finalW/2,margin+25);
+
+    // วาด 3 ช่อง
+    const gutter=24,photoX=innerX+28,photoW=innerW-56;
+    const singleH=Math.floor((innerH-gutter*2-56)/3);
+    let y=innerY+28;
+    for(let i=0;i<3;i++){
+      ctx.fillStyle='#e9f6ff';
+      roundRect(ctx,photoX,y,photoW,singleH,16,true,false);
+      if(captures[i]) await drawImageInFrame(ctx,captures[i],photoX,y,photoW,singleH,16);
+      ctx.strokeStyle='#fff';ctx.lineWidth=8;
+      roundRect(ctx,photoX+6,y+6,photoW-12,singleH-12,14,false,true);
+      y+=singleH+gutter;
+    }
+
+    // ดาว/เมฆตกแต่ง
+    const colors=['#ffd54f','#ffb6c1','#fff0aa','#ffe0f0'];
+    for(let i=0;i<35;i++){
+      const r=Math.random()*20+6;
+      const x=Math.random()*finalW;
+      const yPos=Math.random()*finalH;
+      if(x>photoX-40 && x<photoX+photoW+40 && yPos>innerY-20 && yPos<innerY+innerH+20) continue;
+      if(Math.random()<0.7){
+        drawStar(ctx,x,yPos,r,colors[Math.floor(Math.random()*colors.length)]);
+      }else{
+        drawCloud(ctx,x,yPos,r*3,r*1.5,colors[Math.floor(Math.random()*colors.length)]);
+      }
+    }
+
+    const a=document.createElement('a');
+    a.href=canvas.toDataURL('image/png');
+    a.download='photobooth_3shots.png';
+    a.click();
+  });
+})();
 </script>
 </body>
 </html>
