--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Photo Booth</title>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap" rel="stylesheet">
+<title>SENA BOOTH</title>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
 <style>
 :root{
   --blue:#b0e5ff;
@@ -13,31 +13,32 @@
   --text:#223344;
 }
 html,body{
-  margin:0;height:100%;
+  margin:0;padding:0;height:100%;
   background:var(--blue);
   display:flex;align-items:center;justify-content:center;
   font-family:"Quicksand",sans-serif;
 }
 .booth{
-  width:380px;max-width:90%;
-  background:white;
-  border:8px solid var(--pink);
-  border-radius:24px;
-  box-shadow:0 8px 18px rgba(0,0,0,0.15);
-  padding:18px;
+  width:90vw;max-width:800px;
+  background:#fff;
+  border:10px solid var(--pink);
+  border-radius:30px;
+  box-shadow:0 8px 24px rgba(0,0,0,0.2);
+  padding:20px;
+  box-sizing:border-box;
   text-align:center;
 }
 .title{
-  font-size:22px;
+  font-size:2rem;
   font-weight:700;
-  margin-bottom:12px;
   color:var(--text);
+  margin-bottom:12px;
 }
 .frame{
   width:100%;
   aspect-ratio:3/4;
+  border:8px solid var(--yellow);
   border-radius:20px;
-  border:6px solid var(--yellow);
   overflow:hidden;
   position:relative;
   background:#eee;
@@ -50,7 +51,7 @@ html,body{
 .countdown{
   position:absolute;inset:0;
   display:flex;align-items:center;justify-content:center;
-  font-size:64px;font-weight:900;
+  font-size:5rem;font-weight:900;
   color:white;text-shadow:0 4px 12px rgba(0,0,0,0.4);
 }
 .flash{
@@ -66,15 +67,14 @@ html,body{
   border:6px solid white;
   box-shadow:0 4px 14px rgba(0,0,0,0.25);
   cursor:pointer;
-  transition:transform 0.1s;
 }
-#shutter:active{transform:scale(0.92);}
 .thumb-row{
   margin-top:18px;
-  display:flex;justify-content:space-between;width:100%;
+  display:flex;flex-wrap:wrap;gap:8px;justify-content:center;
 }
 .thumb{
-  width:32%;aspect-ratio:3/4;
+  width:30%;min-width:90px;
+  aspect-ratio:3/4;
   border-radius:12px;
   border:4px solid var(--pink);
   overflow:hidden;
@@ -95,7 +95,7 @@ html,body{
 </head>
 <body>
 <div class="booth">
-  <div class="title">Photo Booth</div>
+  <div class="title">SENA BOOTH</div>
   <div class="frame">
     <video id="video" autoplay playsinline></video>
     <div class="countdown" id="countdown"></div>
@@ -108,7 +108,7 @@ html,body{
       <div class="thumb" id="t2"></div>
       <div class="thumb" id="t3"></div>
     </div>
-    <button id="downloadBtn" class="download-btn">ดาวน์โหลด</button>
+    <button id="downloadBtn" class="download-btn">ดาวน์โหลดรูป</button>
   </div>
 </div>
 
@@ -154,7 +154,7 @@ html,body{
       const img=capture();
       captures[i]=img;
       thumbs[i].innerHTML=`<img src="${img}">`;
-      if(i<2) await new Promise(r=>setTimeout(r,1000)); // เว้น 1 วิ
+      if(i<2) await new Promise(r=>setTimeout(r,1000));
     }
   }
   shutter.addEventListener('click',takeThreeShots);
@@ -169,21 +169,21 @@ html,body{
     // พื้นหลัง + กรอบ
     ctx.fillStyle="#b0e5ff";
     ctx.fillRect(0,0,w,h);
-    ctx.lineWidth=20;
+    ctx.lineWidth=30;
     ctx.strokeStyle="#ffb6c1";
-    ctx.strokeRect(10,10,w-20,h-20);
+    ctx.strokeRect(15,15,w-30,h-30);
 
-    // หัวเรื่อง
+    // หัวเรื่อง SENA BOOTH
     ctx.fillStyle="#223344";
-    ctx.font="bold 64px Quicksand";
+    ctx.font="bold 72px Quicksand";
     ctx.textAlign="center";
-    ctx.fillText("Photo Booth", w/2, 90);
+    ctx.fillText("SENA BOOTH", w/2, 90);
 
     // 3 ช่องรูป
-    const margin=60, gap=40;
-    const boxW=w-2*margin, boxH=(h-200 - 2*gap)/3;
+    const margin=70, gap=40;
+    const boxW=w-2*margin, boxH=(h-220 - 2*gap)/3;
     for(let i=0;i<3;i++){
-      const y=140 + i*(boxH+gap);
+      const y=150 + i*(boxH+gap);
       ctx.strokeStyle="#ffd54f";
       ctx.lineWidth=12;
       ctx.strokeRect(margin,y,boxW,boxH);
@@ -197,7 +197,7 @@ html,body{
 
     const a=document.createElement('a');
     a.href=c.toDataURL("image/png");
-    a.download="photo_booth.png";
+    a.download="sena_booth.png";
     a.click();
   });
 
